--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,24 @@
 
 </head>
 <body>
-    
+
+    <nav class="navbar navbar-default" ng-controller="navCtrl" ng-hide="navVariable">
+        <div class="container-fluid">
+            <div class="navbar-header"><a class="navbar-brand navbar-link" href="#"><strong>Result Predictor</strong></a>
+                <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
+            </div>
+            <div class="collapse navbar-collapse" id="navcol-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="active" role="presentation"><a href="">My History</a></li>
+                    <li role="presentation"><a href="" >My Analytics</a></li>
+                    <li role="presentation"><a href="">My Predictor</a></li>
+                    <li role="presentation"><a href="">Settings</a></li>
+                    <li role="presentation"><a href="" style="color:#0000FF;" ng-click="logout()">Log out</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
     <div ng-view></div>
     
     <script src="assets/js/jQuery/jquery.min.js"></script>
@@ -52,6 +69,7 @@
     <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script> -->
 
     <script src="assets/js/controller/controller.js"></script>
+    <!-- <script src="assets/js/controller/dashboardController.js"></script> -->
 
 </body>
 </html>
